--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" class="mdc-typography">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
   <title>Choo</title>
   <link rel="stylesheet" href="/assets/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
